--- a/index.html
+++ b/index.html
@@ -1,219 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student Support</title>
-  <style>
-    * { box-sizing: border-box; font-family: sans-serif; }
-    body { margin: 0; background: #f9fafb; text-align: center; }
-
-    .page { display: none; padding: 20px; }
-    .page.active { display: block; }
-
-    button { padding: 10px 18px; border-radius: 12px; border: none; cursor: pointer; margin: 6px; background: #0070c9; color: white; }
-
-    /* Modal Styles */
-    .modal-overlay {
-      position: fixed;
-      inset: 0;
-      display: none;
-      justify-content: center;
-      align-items: center;
-      background: rgba(15,23,42,0.55);
-      z-index: 1000;
-      backdrop-filter: blur(6px);
-    }
-    .modal {
-      background: #fff;
-      padding: 28px;
-      border-radius: 18px;
-      width: 360px;
-      text-align: center;
-      box-shadow: 0 24px 60px rgba(0,0,0,0.22);
-    }
-    .modal input, .modal textarea {
-      width: 100%;
-      margin: 8px 0;
-      padding: 10px;
-      border-radius: 12px;
-      border: 1px solid #e6e8ec;
-    }
-    .modal textarea { height: 80px; resize: none; }
-    .modal-buttons { display: flex; justify-content: center; gap: 12px; margin-top: 12px; }
-    .modal-buttons button { flex: 1; }
-
-    /* Crisis modal styling */
-    .crisis-modal ul { text-align: left; padding-left: 0; list-style: none; }
-    .crisis-modal li { margin-bottom: 10px; background: #f8fafc; padding: 10px; border-radius: 12px; border: 1px solid #e2e8f0; }
-    .crisis-actions { display: flex; justify-content: center; gap: 10px; margin-top: 12px; }
-    .crisis-actions .secondary { background: #f1f5f9; color: #334155; }
-    .crisis-actions .primary { background: #0070c9; color: #fff; }
-
-    /* Success modal */
-    .success-icon { width: 50px; height: 50px; border-radius: 50%; background: #16a34a; color: white; font-size: 28px; display: flex; align-items: center; justify-content: center; margin: 10px auto; }
-    .success-text { font-weight: 700; font-size: 18px; margin-bottom: 12px; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Student Message Portal</title>
+<style>
+  body { font-family: sans-serif; margin:0; }
+  .page { display:none; padding:20px; }
+  .page.active { display:block; }
+  .overlay { display:none; position:fixed; top:0; left:0; width:100%; height:100%; 
+             background: rgba(0,0,0,0.5); justify-content:center; align-items:center; }
+  .modal-content { background:#fff; padding:20px; border-radius:8px; max-width:400px; width:90%; }
+  button { margin:5px; padding:10px 15px; }
+</style>
 </head>
-
 <body>
 
-  <!-- Page 1: Select Reason -->
-  <div class="page active" id="page1">
-    <h2>Why are you reaching out?</h2>
-    <button onclick="chooseReason('Academic stress or pressure')">Academic stress or pressure</button>
-    <button onclick="chooseReason('Anxiety or panic attacks')">Anxiety or panic attacks</button>
-    <button onclick="chooseReason('Depression or sadness')">Depression or sadness</button>
-    <button onclick="chooseReason('Family issues or home stress')">Family issues or home stress</button>
-    <button onclick="chooseReason('Relationship or friendship problems')">Relationship or friendship problems</button>
-    <button onclick="chooseReason('Bullying or harassment')">Bullying or harassment</button>
-    <button onclick="chooseReason('I just need someone to talk to')">I just need someone to talk to</button>
-    <button onclick="chooseReason('I’m not ready to say')">I’m not ready to say</button>
+<!-- PAGE 1: Reason Selection -->
+<div id="page1" class="page active">
+  <h2>Select Reason</h2>
+  <button onclick="chooseReason('Academic Help')">Academic Help</button>
+  <button onclick="chooseReason('Mental Health')">Mental Health</button>
+  <button onclick="chooseReason('Other')">Other</button>
+</div>
+
+<!-- PAGE 2: Urgency -->
+<div id="page2" class="page">
+  <h2>How urgent is this?</h2>
+  <button onclick="chooseUrgency('I’m in Crisis')">I’m in Crisis</button>
+  <button onclick="chooseUrgency('I’m Not Coping Well')">I’m Not Coping Well</button>
+  <button onclick="chooseUrgency('Feeling a Little Off')">Feeling a Little Off</button>
+  <button onclick="chooseUrgency('I’m Doing Fine – Just Curious')">I’m Doing Fine – Just Curious</button>
+</div>
+
+<!-- PAGE 3: Counselor Selection -->
+<div id="page3" class="page">
+  <h2>Select Counselor</h2>
+  <button onclick="openModal('miap2k10','miap2k10@example.com')">M. Apel</button>
+  <button onclick="openModal('kmcconnell','kmcconnell@example.com')">K. McConnell</button>
+</div>
+
+<!-- MODAL: Student Info -->
+<div id="modalOverlay" class="overlay">
+  <div class="modal-content">
+    <h3>Enter your info</h3>
+    <input id="firstName" placeholder="First Name"><br>
+    <input id="lastName" placeholder="Last Name"><br>
+    <input id="studentGrade" placeholder="Grade"><br>
+    <input id="studentId" placeholder="Student ID"><br>
+    <textarea id="extraNotes" placeholder="Extra Notes"></textarea><br>
+    <button onclick="submitMessage()">Submit</button>
+    <button onclick="closeModal()">Cancel</button>
   </div>
+</div>
 
-  <!-- Page 2: Select Urgency -->
-  <div class="page" id="page2">
-    <h2>How urgent is this?</h2>
-    <button onclick="chooseUrgency('I’m Doing Fine – Just Curious')">I’m Doing Fine – Just Curious</button>
-    <button onclick="chooseUrgency('Feeling a Little Off')">Feeling a Little Off</button>
-    <button onclick="chooseUrgency('I’m Not Coping Well')">I’m Not Coping Well</button>
-    <button onclick="chooseUrgency('I’m in Crisis')">I’m in Crisis</button>
-    <br>
-    <button onclick="goToPage('page1')">Back</button>
+<!-- OVERLAY: Crisis Warning -->
+<div id="crisisOverlay" class="overlay">
+  <div class="modal-content">
+    <h3>⚠️ Crisis Warning</h3>
+    <p>Please make sure to contact your counselor immediately.</p>
+    <button onclick="continueFromCrisis()">Continue</button>
   </div>
+</div>
 
-  <!-- Page 3: Select Counselor -->
-  <div class="page" id="page3">
-    <h2>Choose Your Counselor</h2>
-    <button onclick="openModal('miap2k10@gmail.com')">miap2k10@gmail.com</button>
-    <button onclick="openModal('kmcconnell@smpanthers.org')">kmcconnell@smpanthers.org</button>
-    <button onclick="openModal('gsorbi@smpanthers.org')">gsorbi@smpanthers.org</button>
-    <button onclick="openModal('apanlilio@smpanthers.org')">apanlilio@smpanthers.org</button>
-    <button onclick="openModal('aturner@smpanthers.org')">aturner@smpanthers.org</button>
-    <button onclick="openModal('cfilson@smpanthers.org')">cfilson@smpanthers.org</button>
-    <br>
-    <button onclick="goToPage('page2')">Back</button>
+<!-- OVERLAY: Success Confirmation -->
+<div id="successOverlay" class="overlay">
+  <div class="modal-content">
+    <h3>✅ Message Sent</h3>
+    <button onclick="closeSuccess()">Close</button>
   </div>
+</div>
 
-  <!-- Message Modal -->
-  <div class="modal-overlay" id="modalOverlay">
-    <div class="modal">
-      <h2>Submit Message</h2>
-      <input type="text" id="firstName" placeholder="First Name (required)">
-      <input type="text" id="lastName" placeholder="Last Name (required)">
-      <input type="text" id="studentGrade" placeholder="Grade (required)">
-      <input type="text" id="studentId" placeholder="Student ID (required)">
-      <textarea id="extraNotes" placeholder="Additional notes (optional)"></textarea>
-      <div class="modal-buttons">
-        <button onclick="closeModal()">Cancel</button>
-        <button onclick="submitMessage()">Submit</button>
-      </div>
-    </div>
-  </div>
+<script>
+let selectedReason = "";
+let selectedUrgency = "";
+let selectedCounselor = "";
+let selectedCounselorEmail = "";
 
-  <!-- Crisis Modal -->
-  <div class="modal-overlay" id="crisisOverlay">
-    <div class="modal crisis-modal">
-      <h2>Immediate Support</h2>
-      <ul>
-        <li><strong>Emergency:</strong> 911</li>
-        <li><strong>Suicide & Crisis Line:</strong> 988</li>
-        <li><strong>Crisis Text Line:</strong> Text HOME to 741741</li>
-        <li><strong>Eating Disorders:</strong> 1-800-931-2237</li>
-        <li><strong>Domestic Violence:</strong> 1-800-799-7233</li>
-        <li><strong>Sexual Assault (RAINN):</strong> 1-800-656-4673</li>
-        <li><strong>LGBTQ Youth (Trevor Project):</strong> 1-866-488-7386</li>
-      </ul>
-      <div class="crisis-actions">
-        <button class="secondary" onclick="closeCrisisModal()">Close</button>
-        <button class="primary" onclick="continueFromCrisis()">Continue</button>
-      </div>
-    </div>
-  </div>
+// Page navigation
+function goToPage(id) {
+  document.querySelectorAll(".page").forEach(p => p.classList.remove("active"));
+  const page = document.getElementById(id);
+  if(page) page.classList.add("active");
+}
 
-  <!-- Success Modal -->
-  <div class="modal-overlay" id="successOverlay">
-    <div class="modal">
-      <div class="success-icon">✓</div>
-      <div class="success-text">Message sent!</div>
-      <button onclick="closeSuccess()">OK</button>
-    </div>
-  </div>
+// Reason selection
+function chooseReason(reason) {
+  selectedReason = reason;
+  goToPage("page2");
+}
 
-  <script>
-    let selectedReason = "";
-    let selectedUrgency = "";
-    let selectedCounselor = "";
+// Urgency selection
+function chooseUrgency(urgency) {
+  selectedUrgency = urgency;
+  if (urgency === "I’m in Crisis") openCrisisModal();
+  else goToPage("page3");
+}
 
-    function goToPage(id){
-      document.querySelectorAll(".page").forEach(p => p.classList.remove("active"));
-      document.getElementById(id).classList.add("active");
-    }
+// Crisis overlay
+function openCrisisModal() { document.getElementById("crisisOverlay").style.display="flex"; }
+function closeCrisisModal() { document.getElementById("crisisOverlay").style.display="none"; }
+function continueFromCrisis() { closeCrisisModal(); goToPage("page3"); }
 
-    function chooseReason(reason){
-      selectedReason = reason;
-      goToPage("page2");
-    }
+// Modal overlay
+function openModal(username,email) {
+  selectedCounselor = username;
+  selectedCounselorEmail = email;
+  document.getElementById("modalOverlay").style.display="flex";
+}
+function closeModal() { document.getElementById("modalOverlay").style.display="none"; }
 
-    function chooseUrgency(urgency){
-      selectedUrgency = urgency;
-      if(urgency === "I’m in Crisis"){
-        openCrisisModal();
-      } else {
-        goToPage("page3");
-      }
-    }
+// Success overlay
+function openSuccess() { document.getElementById("successOverlay").style.display="flex"; }
+function closeSuccess() { document.getElementById("successOverlay").style.display="none"; goToPage("page1"); }
 
-    function openCrisisModal(){ document.getElementById("crisisOverlay").style.display = "flex"; }
-    function closeCrisisModal(){ document.getElementById("crisisOverlay").style.display = "none"; }
-    function continueFromCrisis(){ closeCrisisModal(); goToPage("page3"); }
+// Submit message (SIS-ready)
+async function submitMessage() {
+  const firstName = document.getElementById("firstName")?.value.trim();
+  const lastName = document.getElementById("lastName")?.value.trim();
+  const grade = document.getElementById("studentGrade")?.value.trim();
+  const studentId = document.getElementById("studentId")?.value.trim();
+  const notes = document.getElementById("extraNotes")?.value.trim();
 
-    function openModal(email){
-      selectedCounselor = email.split("@")[0];
-      document.getElementById("modalOverlay").style.display = "flex";
-    }
-    function closeModal(){ document.getElementById("modalOverlay").style.display = "none"; }
+  if(!firstName || !lastName || !grade || !studentId){
+    alert("Please fill in all required fields."); return;
+  }
 
-    function openSuccess(){ document.getElementById("successOverlay").style.display = "flex"; }
-    function closeSuccess(){ document.getElementById("successOverlay").style.display = "none"; goToPage("page1"); }
+  // SIS verification
+  try {
+    const res = await fetch("/api/verifyStudent",{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify({studentId, firstName, lastName})
+    });
+    const verify = await res.json();
+    if(!verify.valid){ alert("Student ID not recognized."); return; }
+  } catch(err){ console.error(err); alert("Failed to verify student ID."); return; }
 
-    function submitMessage(){
-      const firstName = document.getElementById("firstName").value.trim();
-      const lastName = document.getElementById("lastName").value.trim();
-      const grade = document.getElementById("studentGrade").value.trim();
-      const studentId = document.getElementById("studentId").value.trim();
-      const notes = document.getElementById("extraNotes").value.trim();
+  const entry = {
+    firstName,lastName,grade,studentId,notes,
+    reason:selectedReason,urgency:selectedUrgency,
+    counselor:selectedCounselor,counselorEmail:selectedCounselorEmail,
+    dateTime:new Date().toISOString()
+  };
 
-      if(!firstName || !lastName || !grade || !studentId){
-        alert("Please fill in all required fields.");
-        return;
-      }
+  try {
+    const res = await fetch("/api/messages",{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify(entry)
+    });
+    const data = await res.json();
+    if(!data.success) throw new Error("Failed");
 
-      // Example authentication check for SIS
-      const enrolledStudents = ["12345","67890"]; // replace with SIS integration
-      if(!enrolledStudents.includes(studentId)){
-        alert("Student ID not recognized.");
-        return;
-      }
+    // Optional localStorage copy
+    const existing = JSON.parse(localStorage.getItem("studentMessages")||"[]");
+    existing.push(entry);
+    localStorage.setItem("studentMessages", JSON.stringify(existing));
 
-      const messages = JSON.parse(localStorage.getItem("studentMessages") || "[]");
-      const dateTime = new Date().toLocaleString();
+    closeModal(); openSuccess();
 
-      messages.push({
-        firstName, lastName, grade, studentId, notes,
-        reason: selectedReason,
-        urgency: selectedUrgency,
-        counselor: selectedCounselor,
-        dateTime
-      });
+    // Reset form
+    ["firstName","lastName","studentGrade","studentId","extraNotes"].forEach(id=>{
+      const el = document.getElementById(id); if(el) el.value="";
+    });
+    selectedReason = ""; selectedUrgency = ""; selectedCounselor = ""; selectedCounselorEmail = "";
 
-      localStorage.setItem("studentMessages", JSON.stringify(messages));
-      closeModal();
-      openSuccess();
-    }
-  </script>
+  } catch(err){ console.error(err); alert("Failed to send message."); }
+}
+</script>
+
 </body>
 </html>
-
-
-
