--- a/index.html
+++ b/index.html
@@ -1,174 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Student Message Portal</title>
-<style>
-  body { font-family: sans-serif; margin:0; }
-  .page { display:none; padding:20px; }
-  .page.active { display:block; }
-  .overlay { display:none; position:fixed; top:0; left:0; width:100%; height:100%; 
-             background: rgba(0,0,0,0.5); justify-content:center; align-items:center; }
-  .modal-content { background:#fff; padding:20px; border-radius:8px; max-width:400px; width:90%; }
-  button { margin:5px; padding:10px 15px; }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Student Support</title>
+  <link rel="stylesheet" href="style.css" />
+
+  <style>
+    * { box-sizing: border-box; }
+
+    /* Modal/Overlay styles same as original */
+    .modal-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(15, 23, 42, 0.55);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+      backdrop-filter: blur(6px);
+    }
+
+    .modal { width: 360px; margin: 0 auto; background: #fff; padding: 28px 26px; border-radius: 18px; text-align: center; box-shadow: 0 24px 60px rgba(0,0,0,0.22); border: 1px solid #eef2f7; }
+    .modal h2 { margin: 0 0 14px 0; font-size: 20px; font-weight: 700; color: #0f172a; }
+    .modal input, .modal textarea { width: 100%; margin-bottom: 12px; padding: 11px 12px; font-size: 14px; border-radius: 12px; border: 1px solid #e6e8ec; background: #f9fafb; text-align: center; transition: border 0.2s, box-shadow 0.2s; }
+    .modal input:focus, .modal textarea:focus { outline:none; border:1px solid #0070c9; box-shadow:0 0 0 3px rgba(0,112,201,0.2); background:#fff; }
+    .modal textarea { resize:none; height:90px; }
+    .modal-buttons { display:flex; justify-content:center; gap:12px; margin-top:6px; }
+    .modal-buttons button { padding:9px 18px; border-radius:999px; border:none; cursor:pointer; font-size:14px; }
+    .modal-buttons button:first-child { background:#f1f5f9; color:#334155; }
+    .modal-buttons button:last-child { background:#0070c9; color:white; }
+
+    /* Success modal */
+    .success-modal { width:320px; text-align:center; }
+    .success-icon { width:56px;height:56px;border-radius:50%;background:#16a34a;color:#fff;display:inline-flex;align-items:center;justify-content:center;font-size:28px;font-weight:700;margin:4px auto 10px auto; }
+    .success-text { font-size:18px;font-weight:700;color:#0f172a;margin-bottom:10px; }
+    .success-actions button { padding:10px 18px; border-radius:999px; border:none; cursor:pointer; font-size:14px; font-weight:600; background:#0070c9; color:#fff; }
+
+    /* Crisis modal */
+    .crisis-modal { width:min(560px,92vw); text-align:left; }
+    .crisis-modal h2 { text-align:center; }
+    .crisis-list { margin:0; padding:0; list-style:none; display:flex; flex-direction:column; gap:10px; font-size:14px; color:#0f172a; }
+    .crisis-list strong { display:block; font-size:15px; }
+    .crisis-section { background:#f8fafc; border:1px solid #e2e8f0; border-radius:12px; padding:12px; }
+    .crisis-actions { display:flex; justify-content:center; gap:12px; margin-top:14px; }
+    .crisis-actions .secondary { background:#f1f5f9; color:#334155; }
+    .crisis-actions .primary { background:#0070c9; color:#fff; }
+  </style>
 </head>
 <body>
 
-<!-- PAGE 1: Reason Selection -->
-<div id="page1" class="page active">
-  <h2>Select Reason</h2>
-  <button onclick="chooseReason('Academic Help')">Academic Help</button>
-  <button onclick="chooseReason('Mental Health')">Mental Health</button>
-  <button onclick="chooseReason('Other')">Other</button>
-</div>
-
-<!-- PAGE 2: Urgency -->
-<div id="page2" class="page">
-  <h2>How urgent is this?</h2>
-  <button onclick="chooseUrgency('I’m in Crisis')">I’m in Crisis</button>
-  <button onclick="chooseUrgency('I’m Not Coping Well')">I’m Not Coping Well</button>
-  <button onclick="chooseUrgency('Feeling a Little Off')">Feeling a Little Off</button>
-  <button onclick="chooseUrgency('I’m Doing Fine – Just Curious')">I’m Doing Fine – Just Curious</button>
-</div>
-
-<!-- PAGE 3: Counselor Selection -->
-<div id="page3" class="page">
-  <h2>Select Counselor</h2>
-  <button onclick="openModal('miap2k10','miap2k10@example.com')">M. Apel</button>
-  <button onclick="openModal('kmcconnell','kmcconnell@example.com')">K. McConnell</button>
-</div>
-
-<!-- MODAL: Student Info -->
-<div id="modalOverlay" class="overlay">
-  <div class="modal-content">
-    <h3>Enter your info</h3>
-    <input id="firstName" placeholder="First Name"><br>
-    <input id="lastName" placeholder="Last Name"><br>
-    <input id="studentGrade" placeholder="Grade"><br>
-    <input id="studentId" placeholder="Student ID"><br>
-    <textarea id="extraNotes" placeholder="Extra Notes"></textarea><br>
-    <button onclick="submitMessage()">Submit</button>
-    <button onclick="closeModal()">Cancel</button>
+  <!-- Page 1 -->
+  <div class="page active" id="page1">
+    <img src="page1.png" alt="Welcome Page">
+    <button class="hotspot academic" onclick="chooseReason('Academic stress or pressure')"></button>
+    <button class="hotspot anxiety" onclick="chooseReason('Anxiety or panic attacks')"></button>
+    <button class="hotspot depression" onclick="chooseReason('Depression or sadness')"></button>
+    <button class="hotspot family" onclick="chooseReason('Family issues or home stress')"></button>
+    <button class="hotspot relationship" onclick="chooseReason('Relationship or friendship problems')"></button>
+    <button class="hotspot bullying" onclick="chooseReason('Bullying or harassment')"></button>
+    <button class="hotspot talk" onclick="chooseReason('I just need someone to talk to')"></button>
+    <button class="hotspot unsure" onclick="chooseReason('I’m not ready to say')"></button>
   </div>
-</div>
 
-<!-- OVERLAY: Crisis Warning -->
-<div id="crisisOverlay" class="overlay">
-  <div class="modal-content">
-    <h3>⚠️ Crisis Warning</h3>
-    <p>Please make sure to contact your counselor immediately.</p>
-    <button onclick="continueFromCrisis()">Continue</button>
+  <!-- Page 2 -->
+  <div class="page" id="page2">
+    <img src="page2.png" alt="Urgency Page">
+    <button class="hotspot fine" onclick="chooseUrgency('I’m Doing Fine – Just Curious')"></button>
+    <button class="hotspot littleoff" onclick="chooseUrgency('Feeling a Little Off')"></button>
+    <button class="hotspot coping" onclick="chooseUrgency('I’m Not Coping Well')"></button>
+    <button class="hotspot crisis" onclick="chooseUrgency('I’m in Crisis')"></button>
+    <button class="back-button" onclick="goToPage('page1')">Back</button>
   </div>
-</div>
 
-<!-- OVERLAY: Success Confirmation -->
-<div id="successOverlay" class="overlay">
-  <div class="modal-content">
-    <h3>✅ Message Sent</h3>
-    <button onclick="closeSuccess()">Close</button>
+  <!-- Page 3 -->
+  <div class="page" id="page3">
+    <img src="page3.png" alt="Counselor Page">
+    <div class="counselor-grid">
+      <button onclick="openModal('miap2k10','miap2k10@gmail.com')">miap2k10@gmail.com</button>
+      <button onclick="openModal('kmcconnell','kmcconnell@smpanthers.org')">kmcconnell@smpanthers.org</button>
+      <button onclick="openModal('gsorbi','gsorbi@smpanthers.org')">gsorbi@smpanthers.org</button>
+      <button onclick="openModal('apanlilio','apanlilio@smpanthers.org')">apanlilio@smpanthers.org</button>
+      <button onclick="openModal('aturner','aturner@smpanthers.org')">aturner@smpanthers.org</button>
+      <button onclick="openModal('cfilson','cfilson@smpanthers.org')">cfilson@smpanthers.org</button>
+    </div>
+    <button class="back-button" onclick="goToPage('page2')">Back</button>
   </div>
-</div>
 
-<script>
-let selectedReason = "";
-let selectedUrgency = "";
-let selectedCounselor = "";
-let selectedCounselorEmail = "";
+  <!-- Crisis Modal -->
+  <div class="modal-overlay" id="crisisOverlay">
+    <div class="modal crisis-modal">
+      <h2>Immediate Support</h2>
+      <ul class="crisis-list">
+        <li class="crisis-section"><strong>Emergency</strong>911 – Emergency services (police / ambulance / fire).</li>
+        <li class="crisis-section"><strong>Mental Health & Crisis Support</strong>
+          988 Suicide & Crisis Lifeline – Call or text 988.<br>
+          Crisis Text Line – Text HOME to 741741.
+        </li>
+      </ul>
+      <div class="crisis-actions">
+        <button class="secondary" onclick="closeCrisisModal()">Close</button>
+        <button class="primary" onclick="continueFromCrisis()">Continue to Counselor</button>
+      </div>
+    </div>
+  </div>
 
-// Page navigation
-function goToPage(id) {
-  document.querySelectorAll(".page").forEach(p => p.classList.remove("active"));
-  const page = document.getElementById(id);
-  if(page) page.classList.add("active");
-}
+  <!-- Student Info Modal -->
+  <div class="modal-overlay" id="modalOverlay">
+    <div class="modal">
+      <h2>Submit Message</h2>
+      <input type="text" id="firstName" placeholder="First Name (required)">
+      <input type="text" id="lastName" placeholder="Last Name (required)">
+      <input type="text" id="studentGrade" placeholder="Grade (required)">
+      <input type="text" id="studentId" placeholder="Student ID (required)">
+      <textarea id="extraNotes" placeholder="Additional notes (optional)"></textarea>
+      <div class="modal-buttons">
+        <button onclick="closeModal()">Cancel</button>
+        <button onclick="submitMessage()">Submit</button>
+      </div>
+    </div>
+  </div>
 
-// Reason selection
-function chooseReason(reason) {
-  selectedReason = reason;
-  goToPage("page2");
-}
+  <!-- Success Modal -->
+  <div class="modal-overlay" id="successOverlay">
+    <div class="modal success-modal">
+      <div class="success-icon">✓</div>
+      <div class="success-text">Message sent!</div>
+      <div class="success-actions">
+        <button onclick="closeSuccess()">OK</button>
+      </div>
+    </div>
+  </div>
 
-// Urgency selection
-function chooseUrgency(urgency) {
-  selectedUrgency = urgency;
-  if (urgency === "I’m in Crisis") openCrisisModal();
-  else goToPage("page3");
-}
+  <script>
+    let selectedReason=null, selectedUrgency=null, selectedCounselor=null, selectedCounselorEmail=null;
 
-// Crisis overlay
-function openCrisisModal() { document.getElementById("crisisOverlay").style.display="flex"; }
-function closeCrisisModal() { document.getElementById("crisisOverlay").style.display="none"; }
-function continueFromCrisis() { closeCrisisModal(); goToPage("page3"); }
+    function goToPage(id){ document.querySelectorAll(".page").forEach(p=>p.classList.remove("active")); document.getElementById(id).classList.add("active"); }
+    function chooseReason(reason){ selectedReason=reason; goToPage("page2"); }
+    function chooseUrgency(urgency){ selectedUrgency=urgency; if(urgency==="I’m in Crisis") openCrisisModal(); else goToPage("page3"); }
+    function openCrisisModal(){ document.getElementById("crisisOverlay").style.display="flex"; }
+    function closeCrisisModal(){ document.getElementById("crisisOverlay").style.display="none"; }
+    function continueFromCrisis(){ closeCrisisModal(); goToPage("page3"); }
+    function openModal(username,email){ selectedCounselor=username; selectedCounselorEmail=email; document.getElementById("modalOverlay").style.display="flex"; }
+    function closeModal(){ document.getElementById("modalOverlay").style.display="none"; }
+    function openSuccess(){ document.getElementById("successOverlay").style.display="flex"; }
+    function closeSuccess(){ document.getElementById("successOverlay").style.display="none"; goToPage("page1"); }
 
-// Modal overlay
-function openModal(username,email) {
-  selectedCounselor = username;
-  selectedCounselorEmail = email;
-  document.getElementById("modalOverlay").style.display="flex";
-}
-function closeModal() { document.getElementById("modalOverlay").style.display="none"; }
+    async function submitMessage(){
+      const firstName=document.getElementById("firstName").value.trim();
+      const lastName=document.getElementById("lastName").value.trim();
+      const grade=document.getElementById("studentGrade").value.trim();
+      const studentId=document.getElementById("studentId").value.trim();
+      const notes=document.getElementById("extraNotes").value.trim();
 
-// Success overlay
-function openSuccess() { document.getElementById("successOverlay").style.display="flex"; }
-function closeSuccess() { document.getElementById("successOverlay").style.display="none"; goToPage("page1"); }
+      if(!firstName||!lastName||!grade||!studentId){ alert("Please fill in required fields."); return; }
 
-// Submit message (SIS-ready)
-async function submitMessage() {
-  const firstName = document.getElementById("firstName")?.value.trim();
-  const lastName = document.getElementById("lastName")?.value.trim();
-  const grade = document.getElementById("studentGrade")?.value.trim();
-  const studentId = document.getElementById("studentId")?.value.trim();
-  const notes = document.getElementById("extraNotes")?.value.trim();
+      // ✅ SIS verification
+      try{
+        const res=await fetch("/api/verifyStudent",{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({studentId,firstName,lastName})});
+        const verify=await res.json();
+        if(!verify.valid){ alert("Student ID not recognized."); return; }
+      }catch(err){ console.error(err); alert("Verification failed."); return; }
 
-  if(!firstName || !lastName || !grade || !studentId){
-    alert("Please fill in all required fields."); return;
-  }
+      const entry={ firstName,lastName,grade,studentId,notes,reason:selectedReason,urgency:selectedUrgency,counselor:selectedCounselor,counselorEmail:selectedCounselorEmail,dateTime:new Date().toISOString() };
 
-  // SIS verification
-  try {
-    const res = await fetch("/api/verifyStudent",{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({studentId, firstName, lastName})
-    });
-    const verify = await res.json();
-    if(!verify.valid){ alert("Student ID not recognized."); return; }
-  } catch(err){ console.error(err); alert("Failed to verify student ID."); return; }
-
-  const entry = {
-    firstName,lastName,grade,studentId,notes,
-    reason:selectedReason,urgency:selectedUrgency,
-    counselor:selectedCounselor,counselorEmail:selectedCounselorEmail,
-    dateTime:new Date().toISOString()
-  };
-
-  try {
-    const res = await fetch("/api/messages",{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify(entry)
-    });
-    const data = await res.json();
-    if(!data.success) throw new Error("Failed");
-
-    // Optional localStorage copy
-    const existing = JSON.parse(localStorage.getItem("studentMessages")||"[]");
-    existing.push(entry);
-    localStorage.setItem("studentMessages", JSON.stringify(existing));
-
-    closeModal(); openSuccess();
-
-    // Reset form
-    ["firstName","lastName","studentGrade","studentId","extraNotes"].forEach(id=>{
-      const el = document.getElementById(id); if(el) el.value="";
-    });
-    selectedReason = ""; selectedUrgency = ""; selectedCounselor = ""; selectedCounselorEmail = "";
-
-  } catch(err){ console.error(err); alert("Failed to send message."); }
-}
-</script>
+      try{
+        const res=await fetch("/api/messages",{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(entry)});
+        const data=await res.json();
+        if(!data.success) throw new Error("Failed to submit message");
+        closeModal(); openSuccess();
+      }catch(err){ console.error(err); alert("Failed to submit message."); }
+    }
+  </script>
 
 </body>
 </html>
